fix Firefox showing scrollbar all the time

--- a/litewrite.css
+++ b/litewrite.css
@@ -31,7 +31,7 @@ html, body {
 #add { display:inline-block; width:60%; font-size:120%; font-weight:bold; color:#000; }
 #add:hover:after { content:' +'; }
 
-#entries { height:80%; overflow-y:scroll; }
+#entries { height:80%; overflow-y:auto; }
 #entries a { text-overflow:ellipsis; }
 
 #credits { position:absolute; bottom:2em; padding:.5em; font-size:.7em; white-space:nowrap; opacity:.7; }
